--- a/assets/scss/option-page.scss
+++ b/assets/scss/option-page.scss
@@ -193,3 +193,19 @@
         background-color: rgb(34, 79, 214);
     }
 }
+
+@media screen and (max-width: 420px) {
+    #option-page {
+        width: 90%;
+        margin: auto;
+        left: 0px;
+    }
+}
+
+@media screen and (max-width: 720px) {
+    #option-page {
+        width: 75%;
+        margin: auto;
+        left: 0px;
+    }
+}
