--- a/views/organiser/home.ejs
+++ b/views/organiser/home.ejs
@@ -73,7 +73,7 @@
             $(it).removeClass(" active-tab");
         });
         $(itm).addClass(" active-tab");
-        console.log("type is ", type);
+        // console.log("type is ", type);
         $(".content-profile").each((i, im) => {
             //console.log("im is ", $(im));
             if ($(im).hasClass(type)) {
