--- a/views/updateOrAddMemberPage.ejs
+++ b/views/updateOrAddMemberPage.ejs
@@ -192,10 +192,10 @@
 
         image.style.border = "2px solid grey";
         preview.appendChild(image);
-        console.log("Y ");
+        //console.log("Y ");
       });
       reader.readAsDataURL(file);
-      console.log("yes ");
+      //console.log("yes ");
     }
   }
   document.querySelector("#file-input").addEventListener("change", changeImage);
