--- a/views/new_event_page.ejs
+++ b/views/new_event_page.ejs
@@ -77,15 +77,15 @@
         ).valueOf();
         let eventErrorDiv = document.getElementById("time-error");
         let eventAddButton = document.getElementById("event-add-button");
-        console.log("event-error-div ", eventErrorDiv);
-        console.log(
-            "event start time is ",
-            document.getElementById("event-start-time").value,
-            " and start time is: ",
-            eventStartTime
-        );
+        //console.log("event-error-div ", eventErrorDiv);
+        //     //console.log(
+        //     "event start time is ",
+        //     document.getElementById("event-start-time").value,
+        //         " and start time is: ",
+        //         eventStartTime
+        // );
         if (eventEndTime && eventStartTime && eventStartTime > eventEndTime) {
-            console.log("invalid time peroid");
+            //console.log("invalid time peroid");
             eventErrorDiv.style.display = "inline-block";
             eventErrorDiv.innerText = "select valid time peroid";
             // eventAddButton.disabled = "true";
@@ -105,19 +105,19 @@
         const venuSpan = e.target;
         const venuError = document.getElementById("venu-error");
         if (venu.value) {
-            console.log("clear command");
+            //console.log("clear command");
             venu.value = "";
             venuSpan.innerText = "Select";
             document.getElementById("show-location").style.display = "none";
             venuError.style.display = "none";
             return;
         }
-        console.log("select command");
-        // console.log("yes %%");
+        //console.log("select command");
+        // //console.log("yes %%");
         if (navigator.geolocation) {
             navigator.geolocation.getCurrentPosition(showPosition, showError);
         } else {
-            console.log("your browser is not supporting ");
+            //console.log("your browser is not supporting ");
             venuError.style.display = "inline-block";
             venuError.innerText = "Sorry! your browser is not supporting";
         }
@@ -146,16 +146,16 @@
         const venuError = document.getElementById("venu-error");
         venuError.style.display = "none";
         document.getElementById("show-location").style.display = "inline-block";
-        // console.log("position is ", position);
+        // //console.log("position is ", position);
         const venu = document.getElementById("venu");
         const venuSpan = document.getElementById("venu-span");
         venuSpan.innerText = "Clear";
         let lett = position.coords.latitude;
         var longi = position.coords.longitude;
-        console.log("lett is ", lett, " longi is ", longi);
+        //console.log("lett is ", lett, " longi is ", longi);
         venu.value = lett + "," + longi;
         var lattlong = new google.maps.LatLng(lett, longi);
-        console.log("let long is ****** ", lattlong);
+        //console.log("let long is ****** ", lattlong);
         var myOptions = {
             center: lattlong,
             zoom: 15,
@@ -190,12 +190,12 @@
             infoWindow = new google.maps.InfoWindow({
                 position: mapsMouseEvent.latLng,
             });
-            console.log("vfhhvf ", mapsMouseEvent.latLng.toString());
+            //console.log("vfhhvf ", mapsMouseEvent.latLng.toString());
             let latlngObj = {
                 lat: mapsMouseEvent.latLng.lat(),
                 lng: mapsMouseEvent.latLng.lng(),
             };
-            console.log("jvdjbvjbdvbd ", latlngObj);
+            //console.log("jvdjbvjbdvbd ", latlngObj);
             infoWindow.setContent(
                 // JSON.stringify(mapsMouseEvent.latLng.toJSON(), null, 2)
                 "lat: " + latlngObj.lat + ",  lng: " + latlngObj.lng
