--- a/views/poll_vote_page.ejs
+++ b/views/poll_vote_page.ejs
@@ -217,7 +217,7 @@
         count++;
       } else itm.style.display = "none";
     });
-    console.log("count is ", count);
+    //console.log("count is ", count);
     if (count == 0) {
       document.getElementById("no-voter").style.display = "inline-block";
     }
@@ -225,7 +225,7 @@
   changeVisibleVoteTypes("yes");
   // function listenerToAllRequestLink() {
   //   $(".request-link").each((i, link) => {
-  //     console.log("links are $$$$$$$$$$$$$$ ", link);
+  //     //console.log("links are $$$$$$$$$$$$$$ ", link);
   //     handleRequests($(link));
   //   });
   // }
