--- a/views/select_user_page.ejs
+++ b/views/select_user_page.ejs
@@ -73,7 +73,7 @@
 <script>
   let selectUserEmptyDiv = document.getElementById("select-user-empty-div");
   let type = selectUserEmptyDiv.getAttribute("type");
-  console.log("empty div is ", selectUserEmptyDiv, "  type is ", type);
+  //console.log("empty div is ", selectUserEmptyDiv, "  type is ", type);
   let search_users = document.querySelectorAll(".search-result").length;
   if (search_users == 0 && type != "false") {
     selectUserEmptyDiv.innerText = "No User Found";
@@ -119,7 +119,7 @@
   }
   function handleSelectUserSearch() {
     let SelectStudentForm = $("#search-student-form");
-    console.log("form is ", SelectStudentForm.prop("action"));
+    //console.log("form is ", SelectStudentForm.prop("action"));
     let inputName = $("#search-student-form-input");
     inputName.on("input", function (e) {
       let name = $(e.target).val();
@@ -147,7 +147,7 @@
         },
         error: function (xhr, err) {
           if (xhr.status == 401) {
-            console.log("redirect to login");
+            //console.log("redirect to login");
             handleNotification("error", "Unauthorized, Sign-In first");
             //redirect to login-page
 
@@ -157,7 +157,7 @@
 
             return;
           }
-          console.log("err is ", err.responseText);
+          //console.log("err is ", err.responseText);
           handleNotification("error", xhr.responseJSON.err);
         },
       });
