--- a/views/layouts/home_layout.ejs
+++ b/views/layouts/home_layout.ejs
@@ -152,7 +152,5 @@
     <%}%>
 
     //set notification top value bcz at time of reached here header is created already
-    $('#notifications').css({
-        top: $('header').css('height'),
-    });
+    //setted in home_layout script
 </script>
