--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -27,7 +27,8 @@
     display: flex;
     flex-direction: column;
     box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.2);
-    transition: 0.4; }
+    transition: 0.4;
+    border-radius: 4px; }
     #home-content-container .new-post:hover {
       box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.2); }
     #home-content-container .new-post div {
