--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -16,7 +16,8 @@
     background-color: white;
     box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.2);
     transition: 0.4;
-    padding-bottom: 30px; }
+    padding-bottom: 30px;
+    border-radius: 4px; }
     #post-container .post-class:hover {
       box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.2); }
     #post-container .post-class div {
