--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -30,6 +30,7 @@
         flex-direction: column;
         box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.2);
         transition: 0.4;
+        border-radius: 4px;
         &:hover {
             box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.2);
         }
