--- a/assets/scss/post.scss
+++ b/assets/scss/post.scss
@@ -19,6 +19,7 @@
         box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.2);
         transition: 0.4;
         padding-bottom: 30px;
+        border-radius: 4px;
         &:hover {
             box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.2);
         }
