--- a/assets/scss/home_layout.scss
+++ b/assets/scss/home_layout.scss
@@ -299,7 +299,7 @@
             display: flex;
             flex-direction: row;
             justify-content: space-between;
-            // box-shadow: 0px 0.4px 0.4px 0.4px rgba(0, 0, 0, 0.2);
+            box-shadow: 0px 0.4px 0.4px 0.4px rgba(0, 0, 0, 0.2);
             transition: 0.4;
             margin-top: 15px;
             width: 100%;
@@ -357,7 +357,9 @@
                     max-width: 80%;
                     overflow: hidden;
                     box-sizing: border-box;
-                    .comment-content {
+                    .comment-content,
+                    a,
+                    span {
                         overflow-wrap: break-word;
                         min-width: 100% !important;
                     }
