--- a/views/mailers/mess/menu_change.ejs
+++ b/views/mailers/mess/menu_change.ejs
@@ -12,7 +12,7 @@
                 <br />
                 <p style="text-align: center">
                     <span style="color: greenyellow; font-size: 20"><%=obj.day%>, <%=obj.time%></span style="color:white;"> menu chnaged by hostel
-                    <a href="<%=url%>/user/profile?user_id=<%=obj.by%>">Aaryabhatta</a>
+                    <a href="<%=url%>/user/profile?user_id=<%=obj.by%>"><%=obj.byName%></a>
                 </p>
                 <p style="text-align: center; color: aqua">
                     click on below link to see the new menu
