--- a/views/mailers/member/me_member_delete.ejs
+++ b/views/mailers/member/me_member_delete.ejs
@@ -18,7 +18,7 @@
                 <span style="color: aqua"><%=data.name%> (<%=data.onModel%>)</span>
                 <br />
                 <br />
-                <sub>Link of <%=targetName%> Profile is given below !</sub>
+                <sub>Link of <%=data.name%> Profile is given below !</sub>
             </div>
             <a href="<%=url%>/user/profile?user_id=<%=data._id%>">Click to see profile</a>
             <%-include('../mail_footer');-%>
