--- a/views/mailers/request/accept_new_creator_request.ejs
+++ b/views/mailers/request/accept_new_creator_request.ejs
@@ -53,5 +53,6 @@
             <span style="color: aqua">If you did not get the link, mail us on below mail address
     </span>
         </div>
+        <div>Thanks for your patience</div>
         <%-include('../mail_footer');-%>
 </div>
