--- a/views/mailers/request/creator_account_activate_link.ejs
+++ b/views/mailers/request/creator_account_activate_link.ejs
@@ -68,5 +68,6 @@
       if you did not make this request. you can safely ignore this email
     </span>
             </div>
+            <div>Thanks for your patience</div>
             <%-include('../mail_footer');-%>
     </div>
