--- a/views/mailers/request/reject_new_creator_request.ejs
+++ b/views/mailers/request/reject_new_creator_request.ejs
@@ -49,5 +49,6 @@
                 <span style="padding-left: 25px"><%=obj.data.reason%></span>
             </div>
         </div>
+        <div>Thanks for your patience</div>
         <%-include('../mail_footer');-%>
 </div>
