--- a/views/layouts/home_layout.ejs
+++ b/views/layouts/home_layout.ejs
@@ -154,3 +154,5 @@
     //set notification top value bcz at time of reached here header is created already
     //setted in home_layout script
 </script>
+
+"request-new-creator-account-container"
