--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -49,7 +49,7 @@
         <div>
             <form action="/search" method="POST" id="search-form">
                 <input id="search-input" type="text" name="name" required placeholder="Search users" style="
-            max-width: 220px;
+            max-width: 190px;
             background-color: rgb(238, 238, 238);
             overflow: hidden;
           " />
@@ -135,7 +135,7 @@
     <%if(locals.user && locals.user.onModel=='Student'&&
   locals.user.related.head==null){%>
         <div>
-            <a onclick="handleActiveCreatorPage()" style="position: fixed; right: 2px; top: 2px; cursor: pointer">
+            <a onclick="handleActiveCreatorPage('event')" style="position: fixed; right: 2px; top: 2px; cursor: pointer">
                 <div>
                     <img height="25px" width="25px" src="\uploads\icons/13.detail.png" alt="detail" />
                 </div>
@@ -267,6 +267,7 @@
         }
     });
     $("#toggleAccountIcon").click((e) => {
+
         $("#toggle-account-option").toggleClass("no_display");
     });
 </script>
