--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -46,14 +46,16 @@
             <div style="font-size: 18">chitkara_live</div>
             <div style="font-size: 12">be connected</div>
         </div> -->
-        <div>
-            <form action="/search" method="POST" id="search-form">
+        <div style="height: 100%">
+            <form action="/search" method="POST" id="search-form" style="height: 75%">
                 <input id="search-input" type="text" name="name" required placeholder="Search users" style="
-            max-width: 190px;
+            max-width: 170px;
             background-color: rgb(238, 238, 238);
             overflow: hidden;
+            height: 98%;
+            font-size: 17px;
           " />
-                <input type="submit" value="s" />
+                <input type="submit" value="s" style="height: 98%; font-size: 18px" />
             </form>
         </div>
     </div>
@@ -107,15 +109,20 @@
                 </a>
                 <%}%>
                     <a href="/user/profile?user_id=<%=locals.user.id%>">
-                        <div>
+                        <div style="max-width: 180px">
                             <img src="<%=locals.user.pic%>" alt="profile" height="25px" width="25px" style="border-radius: 50%" />
 
-                            <span class="header-user-name"><%=locals.user.name%></span>
-                        </div>
-                    </a>
-                    <a href="/user/sign-out">
-                        <div style="height: 40px; justify-content: flex-end">
-                            <span style="color: rgb(189, 91, 124)">Log out</span>
+                            <span class="header-user-name" style="
+            word-break: break-all;
+            word-wrap: break-word;
+            text-align: center;
+          "><%=locals.user.name%></span
+        >
+      </div>
+    </a>
+    <a href="/user/sign-out">
+      <div style="height: 40px; justify-content: flex-end">
+        <span style="color: rgb(189, 91, 124)">Log out</span>
                         </div>
                     </a>
                     <%}else{%>
@@ -267,7 +274,6 @@
         }
     });
     $("#toggleAccountIcon").click((e) => {
-
         $("#toggle-account-option").toggleClass("no_display");
     });
 </script>
