--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -174,7 +174,7 @@
                 flex-direction: column;
                 align-items: center;
               ">
-              <span> <%=locals.user ? locals.user.name : 'not define'%> </span>
+              <span style="text-align:center"> <%=locals.user ? locals.user.name : 'not define'%> </span>
                         <span style="color: lightcoral; font-size: 12.5"> <%=locals.user ? locals.user.onModel : 'Not define'%> </span>
                         </span>
                     </div>
@@ -228,7 +228,7 @@
                 flex-direction: column;
                 align-items: center;
               ">
-              <span> ${data.user.name} </span>
+              <span  style="text-align:center"> ${data.user.name} </span>
                         <span style="color: lightcoral; font-size: 12.5"> ${data.user.onModel} </span>
                         </span>
                     </div>
