--- a/assets/scss/home_layout.scss
+++ b/assets/scss/home_layout.scss
@@ -472,6 +472,9 @@
         bottom: 0px !important;
         margin: auto !important;
         top: auto !important;
+        box-sizing: border-box;
+        border-top-left-radius: 6px;
+        border-top-right-radius: 6px;
     }
 }
 
