--- a/assets/css/home_layout.css
+++ b/assets/css/home_layout.css
@@ -386,7 +386,10 @@
     right: 0px !important;
     bottom: 0px !important;
     margin: auto !important;
-    top: auto !important; } }
+    top: auto !important;
+    box-sizing: border-box;
+    border-top-left-radius: 9px;
+    border-top-right-radius: 9px; } }
 
 .no_display {
   display: none !important; }
