--- a/views/mailers/communication/info_mail.ejs
+++ b/views/mailers/communication/info_mail.ejs
@@ -16,6 +16,6 @@
                 <span style="padding-left: 30px; word-wrap: break-word; word-break: break-all"><%=data.content%></span
     >
   </div>
-
+  <div>Thank You</div>
   <%-include('../mail_footer');-%>
 </div>
