--- a/assets/scss/sign_up_using_link.scss
+++ b/assets/scss/sign_up_using_link.scss
@@ -2,7 +2,7 @@
 #set-new-password-link-container {
     background-color: white;
     color: black;
-    margin: auto;
+    margin: auto !important;
     padding: 20px;
     height: auto;
     width: 350px;
