--- a/assets/scss/login_page.scss
+++ b/assets/scss/login_page.scss
@@ -8,7 +8,7 @@
     display: flex;
     border: 2px solid rgb(255, 0, 85);
     position: relative;
-    margin: auto;
+    margin: auto !important;
     justify-content: center;
     align-items: center;
     background-color: rgb(255, 0, 85);
