--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="<%=assetPath('css/login_page.css')%>" />
-<div id="outer">
+<div id="outer" style="margin: auto !important">
     <div id="option-logo-container">
         <div style="
         display: flex;
