--- a/assets/scss/notifications.scss
+++ b/assets/scss/notifications.scss
@@ -6,7 +6,7 @@
     position: fixed;
     top: 56px;
     right: 20px;
-    z-index: 999999999;
+    z-index: 999999999999;
     display: flex;
     flex-direction: column;
     /* overflow: hidden; */
@@ -30,6 +30,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
+    z-index: inherit;
 }
 
 .message {
