--- a/assets/scss/sign_up_using_link.scss
+++ b/assets/scss/sign_up_using_link.scss
@@ -6,6 +6,7 @@
     padding: 20px;
     height: auto;
     width: 350px;
+    box-sizing: border-box !important;
     form {
         margin: auto;
         margin-top: 20px;
