--- a/views/layouts/some_layout.ejs
+++ b/views/layouts/some_layout.ejs
@@ -24,7 +24,7 @@
     </h1> -->
 
     <%-body-%>
-        <div id="notifications" style="top: 10px"></div>
+        <div id="notifications" style="top: 10px; z-index: 9999999 !important"></div>
         <!-- <%-include('../partials/_footer');-%> -->
         <%- script %>
             <script>
