--- a/views/layouts/home_layout.ejs
+++ b/views/layouts/home_layout.ejs
@@ -62,7 +62,7 @@
 </head>
 
 <body>
-    <div id="notifications"></div>
+    <div id="notifications" style="z-index: 9999999 !important"></div>
     <%-include('../partials/_header');-%>
         <div id="request-new-creator-account-container" style="height: auto; padding-bottom: 2px" class="no_display">
             <div style="margin: auto">
