--- a/views/organiser/sign_in.ejs
+++ b/views/organiser/sign_in.ejs
@@ -13,9 +13,9 @@
     </div>
 </div>
 
-<form action="/organiser/create-me" method="POST">
+<!-- <form action="/organiser/create-me" method="POST">
     <input type="email" name="email" required placeholder="Type Email" />
     <input type="password" name="password" required placeholder="Type Password" />
     <input type="text" name="name" required />
     <button>Sign-Up As Organiser</button>
-</form>
+</form> -->
