--- a/views/posts.ejs
+++ b/views/posts.ejs
@@ -175,7 +175,7 @@
                             <%}%>
                 </div>
 
-                <script src="/js/post.js"></script>
+                <script src="<%=assetPath('js/post.js')%>"></script>
                 <script>
                     // add button to load more post
 
