--- a/views/events_page.ejs
+++ b/views/events_page.ejs
@@ -25,7 +25,7 @@
     </button>
     </div>
 </div>
-
+<script src="<%=assetPath('js/post.js')%>"></script>
 <script src="<%=assetPath('js/events.js')%>"></script>
 <!-- <script src="/js/home.js"></script>
 <script src="/js/post.js"></script> -->
