--- a/assets/scss/likes-page.scss
+++ b/assets/scss/likes-page.scss
@@ -3,14 +3,15 @@
     flex-direction: column;
     flex-wrap: wrap;
     width: 37%;
-    margin: auto;
+    margin: auto !important;
     max-width: 37%;
-    min-width: 400px;
+    min-width: 360px;
     // position: relative;
     top: 10.5%;
     background-color: white;
     box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.2);
     transition: 0.4;
+    box-sizing: border-box;
     &:hover {
         box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.2);
     }
