--- a/assets/scss/home_layout.scss
+++ b/assets/scss/home_layout.scss
@@ -62,11 +62,11 @@
 #no-internet {
     position: fixed;
     top: 2px;
-    margin: auto;
+    margin: auto !important;
     /* trick to make absolute/fixed position in center */
     left: 50%;
     margin-left: -200px;
-    width: 380px;
+    width: 360px;
     height: auto;
     padding: 4px 10px 4px 10px;
     background-color: rgb(255, 179, 38);
