--- a/assets/scss/likes-page.scss
+++ b/assets/scss/likes-page.scss
@@ -5,7 +5,7 @@
     width: 37%;
     margin: auto !important;
     max-width: 37%;
-    min-width: 360px;
+    min-width: 360px !important;
     // position: relative;
     top: 10.5%;
     background-color: white;
