--- a/assets/scss/home_layout.scss
+++ b/assets/scss/home_layout.scss
@@ -65,7 +65,7 @@
     margin: auto !important;
     /* trick to make absolute/fixed position in center */
     left: 50%;
-    margin-left: -200px;
+    // margin-left: -200px;
     width: 360px;
     height: auto;
     padding: 4px 10px 4px 10px;
