--- a/views/layouts/some_layout.ejs
+++ b/views/layouts/some_layout.ejs
@@ -1,7 +1,12 @@
 <html>
 
 <head>
-    <link rel="icon" type="image/x-icon" href="uploads/icons/18.logo.png" style="background-color: inherit; height: 50px; width: 50px" />
+    <link rel="icon" type="image/x-icon" href="uploads/icons/18.logo.png" style="
+        background-color: inherit;
+        height: 50px;
+        width: 50px;
+        border-radius: 50%;
+      " />
 
     <meta name="viewport" content="width=device-width,initial-scale:1,height:device-height" />
     <meta charset="UTF-8" />
