--- a/views/layouts/organiser_layout.ejs
+++ b/views/layouts/organiser_layout.ejs
@@ -1,11 +1,16 @@
 <html>
 
 <head>
-    <link rel="icon" type="image/x-icon" href="uploads/icons/18.logo.png" style="background-color: inherit; height: 50px; width: 50px" />
+    <link rel="icon" type="image/x-icon" href="uploads/icons/18.logo.png" style="
+        background-color: inherit;
+        height: 50px;
+        width: 50px;
+        border-radius: 50%;
+      " />
 
     <meta name="viewport" content="width=device-width,initial-scale:1,height:device-height" />
     <meta charset="UTF-8" />
-    <meta name="keywords" content="CU, cu , chitkara , chitkara_live, chitkara live , cu live , cu_live , chalkpad , chitkara chalkpad , college management system login, college management system " />
+    <meta name="keywords" content="CU, cu ,chitkara live ,chitkara live home, chitkara , chitkara_live, chitkara live , cu live , cu_live , chalkpad , chitkara chalkpad , college management system login, college management system " />
     <meta name="description" value="a communication platform for chitkara student" />
 
     <title>
