--- a/views/layouts/home_layout.ejs
+++ b/views/layouts/home_layout.ejs
@@ -12,10 +12,10 @@
       " />
     <meta name="viewport" content="width=device-width,initial-scale:1, height:device-height" />
     <meta charset="UTF-8" />
-    <meta name="keywords" content="CU, cu , chitkara , chitkara_live, chitkara live , cu live , cu_live , chalkpad , chitkara chalkpad , college management system login, college management system " />
-    <meta name="description" value="a communication platform for chitkara student" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
+    <meta name="keywords" content="CU, cu , chitkara , chitkara_live, chitkara live ,chitkara live home ,cu live , cu_live , chalkpad , chitkara chalkpad , college management system login, college management system " />
+    <meta name="description" value="a communication platform for chitkara students, clubs, departments, Hostels and others..." />
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
     <style>
