--- a/assets/scss/save_items.scss
+++ b/assets/scss/save_items.scss
@@ -48,10 +48,13 @@
                 width: 150px;
                 height: 250px;
                 // background-color: red;
-                overflow-wrap: break-word;
+                //overflow-wrap: break-word;
+                word-wrap: break-word;
+                word-break: break-all;
                 // overflow: hidden;
                 box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.2);
                 transition: 0.3;
+                overflow: auto;
                 &:hover {
                     box-shadow: 0px 4px 8px 4px rgba(0, 0, 0, 0.2);
                 }
