--- a/assets/scss/save_items.scss
+++ b/assets/scss/save_items.scss
@@ -54,7 +54,7 @@
                 // overflow: hidden;
                 box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.2);
                 transition: 0.3;
-                overflow: auto;
+                overflow: auto !important;
                 &:hover {
                     box-shadow: 0px 4px 8px 4px rgba(0, 0, 0, 0.2);
                 }
