--- a/assets/scss/home_layout.scss
+++ b/assets/scss/home_layout.scss
@@ -64,7 +64,7 @@
     top: 2px;
     margin: auto !important;
     /* trick to make absolute/fixed position in center */
-    left: 50%;
+    // left: 50%;
     // margin-left: -200px;
     width: 360px;
     height: auto;
