--- a/assets/scss/save_items.scss
+++ b/assets/scss/save_items.scss
@@ -24,6 +24,7 @@
         word-wrap: break-word;
         padding-bottom: 2px;
         border-bottom: 1px solid blue;
+        z-index: 45;
         #heading {
             font-size: 18;
             font-weight: 700;
