--- a/assets/scss/home_layout.scss
+++ b/assets/scss/home_layout.scss
@@ -66,7 +66,8 @@
     /* trick to make absolute/fixed position in center */
     // left: 50%;
     // margin-left: -200px;
-    width: 340px;
+    width: 340px !important;
+    max-width: 340px !important;
     height: auto;
     padding: 4px 10px 4px 10px;
     background-color: rgb(255, 179, 38);
