--- a/assets/scss/user_posts.scss
+++ b/assets/scss/user_posts.scss
@@ -21,6 +21,6 @@
         top: 52px;
         height: 95px;
         margin-bottom: 15px;
-        z-index: 45;
+        z-index: 4544545;
     }
 }
