--- a/assets/scss/save_items.scss
+++ b/assets/scss/save_items.scss
@@ -39,6 +39,8 @@
         margin: 10px;
         display: flex;
         flex-direction: row;
+        justify-content: center;
+        align-items: center;
         flex-wrap: wrap;
         a {
             text-decoration: none;
