--- a/assets/scss/home_layout.scss
+++ b/assets/scss/home_layout.scss
@@ -64,7 +64,7 @@
     top: 2px;
     margin: auto !important;
     /* trick to make absolute/fixed position in center */
-    // left: 50%;
+    left: 50% !important;
     // margin-left: -200px;
     width: 340px !important;
     max-width: 340px !important;
@@ -76,6 +76,7 @@
     font-weight: 480;
     vertical-align: middle;
     box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.2);
+    transform: translateX(-50%) !important;
 }
 
 .toggle-container {
