--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -35,7 +35,7 @@
     </div>
 </header> -->
 
-<header style="z-index: 999999999">
+<header style="z-index: 999999999 !important">
     <div class="left-div">
         <div>
             <a href="/">
