--- a/views/user_posts.ejs
+++ b/views/user_posts.ejs
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="<%=assetPath('css/user_posts.css')%>" />
 <div id="user_posts">
-    <div id="detail-head">
+    <div id="detail-head" style="z-index: 3 !important">
         <div style="
         margin: -35px 0px 0px 0px;
         position: sticky;
