--- a/views/events_page.ejs
+++ b/views/events_page.ejs
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="<%=assetPath('css/event-page.css')%>" />
 <link rel="stylesheet" href="<%=assetPath('css/post.css')%>" />
 <div id="main-container">
-    <div id="events-container">
+    <div id="events-container" style="z-index: 3 !important">
         <div id="events-head">
             <div class="head-tab active-tab" id="upcoming-tab" onclick="changeTab('upcoming')">
                 Running & Upcoming Event
