--- a/views/layouts/some_layout.ejs
+++ b/views/layouts/some_layout.ejs
@@ -36,23 +36,43 @@
         <%- script %>
             <script src="<%=assetPath('js/ajax_request.js')%>"></script>
             <script>
+                // <%if(flash.success&&flash.success.length>0){%>
+                // new Noty({
+                //     theme: 'relax',
+                //     text: "<%=flash.success%>",
+                //     type: 'success',
+                //     layout: 'topRight',
+                //     timeout: 1500,
+                // }).show();
+                // <%}%>
+                // <%if(flash.error&&flash.error.length>0){%>
+                // new Noty({
+                //     theme: 'relax',
+                //     text: "<%=flash.error%>",
+                //     type: 'error',
+                //     layout: 'topRight',
+                //     timeout: 1500,
+                // }).show();
+                // <%}%>
                 <%if(flash.success&&flash.success.length>0){%>
-                new Noty({
-                    theme: 'relax',
-                    text: "<%=flash.success%>",
-                    type: 'success',
-                    layout: 'topRight',
-                    timeout: 1500,
-                }).show();
+                // new Noty({
+                //     theme: 'relax',
+                //     text: "<%=flash.success%>",
+                //     type: 'success',
+                //     layout: 'topRight',
+                //     timeout: 1500,
+                // }).show();
+                handleNotification('success', '<%=flash.success%>');
                 <%}%>
                 <%if(flash.error&&flash.error.length>0){%>
-                new Noty({
-                    theme: 'relax',
-                    text: "<%=flash.error%>",
-                    type: 'error',
-                    layout: 'topRight',
-                    timeout: 1500,
-                }).show();
+                // new Noty({
+                //     theme: 'relax',
+                //     text: "<%=flash.error%>",
+                //     type: 'error',
+                //     layout: 'topRight',
+                //     timeout: 1500,
+                // }).show();
+                handleNotification('error', '<%=flash.error%>');
                 <%}%>
             </script>
 </body>
