--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -179,7 +179,7 @@
                 </div>
             </a>
             <%}else{%>
-                <div style="color: red">No admin</div>
+                <div style="color: red; padding:15px;">No admin</div>
                 <%}%>
     </div>
     <%}%>
