--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -153,7 +153,7 @@
 <script>
     function makeAccountToggleContainer() {
         $("body").append(`<div style="min-width:350px;" id="toggle-account-option" class="no_display">
-            <a >
+            <a>
                 <div style="
             display: flex;
             flex-direction: row;
@@ -167,7 +167,7 @@
             justify-content: space-between;
           ">
                     <div style="display: flex; flex-direction: row; align-items: center; ">
-                        <img id="account-toggle-image" src="" alt="some" height="50px" width="50px" style="border-radius: 50%" />
+                        <img id="account-toggle-image" src="<%=locals.user.pic%>" alt="some" height="50px" width="50px" style="border-radius: 50%" />
                         <span style="
                 padding-left: 5px;
                 display: flex;
@@ -221,7 +221,7 @@
             justify-content: space-between;
           ">
                     <div style="display: flex; flex-direction: row; align-items: center">
-                        <img src="${data.currentImg}" alt="some" height="50px" width="50px" style="border-radius: 50%" />
+                        <img src="${data.user.pic}" alt="some" height="50px" width="50px" style="border-radius: 50%" />
                           <span style="
                 padding-left: 5px;
                 display: flex;
@@ -280,3 +280,4 @@
 <script src="<%=assetPath('js/header.js')%>"></script>
 
 <!-- <script src="/js/ajax_request.js"></script> -->
+"toggle-account-option"
