--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -221,7 +221,7 @@
             justify-content: space-between;
           ">
                     <div style="display: flex; flex-direction: row; align-items: center">
-                        <img src="${data.user.pic}" alt="some" height="50px" width="50px" style="border-radius: 50%" />
+                        <img src="${data.currImg}" alt="some" height="50px" width="50px" style="border-radius: 50%" />
                           <span style="
                 padding-left: 5px;
                 display: flex;
