--- a/assets/scss/login_page.scss
+++ b/assets/scss/login_page.scss
@@ -24,7 +24,7 @@
     height: 500px;
     width: 500px;
     // min-height: 500px;
-    //min-width: 500px !important;
+    min-width: 500px !important;
     border: none;
     position: relative;
     margin: auto;
