--- a/views/posts.ejs
+++ b/views/posts.ejs
@@ -142,7 +142,7 @@
                                     <%if(post.likes[i].creator){%>
                                         <a href="/user/profile?user_id=<%=post.likes[i].creator.id%>" class="like-hover">
 
-                                        <img src="<%=post.likes[i].creator.pic%>" alt="pic" height="40px" width="40px" style=" min-width: 40px; min-height: 40px; padding:0px 7px 0px 7px;">
+                                        <img src="<%=post.likes[i].creator.pic%>" alt="pic" height="40px" width="40px" style="border-radius: 50%; min-width: 40px; min-height: 40px; padding:0px 7px 0px 7px;">
                                        </a>
                                         <%}%>
                                             <%}%>
