--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -126,7 +126,7 @@
           "
         >
           <img
-            src="uploads/icons/8.google-logo-png-icon-free-download.png"
+            src="\uploads\icons/8.google-logo-png-icon-free-download.png"
             alt="logo"
             height="40px"
             width="40px"
