--- a/views/edit-profile-page.ejs
+++ b/views/edit-profile-page.ejs
@@ -1,4 +1,12 @@
 <link rel="stylesheet" href="<%=assetPath('css/new_post.css')%>" />
+<style>
+    input {
+        border: none;
+        border-bottom: 1px solid black;
+        outline: none;
+        font-size: medium;
+    }
+</style>
 <div id="update-profile">
     <div id="img-container">
         <img src="<%=locals.user.pic%>" alt="" height="65px" width="65px" style="border-radius: 50%" />
