--- a/views/edit-profile-page.ejs
+++ b/views/edit-profile-page.ejs
@@ -17,8 +17,8 @@
             <input type="file" name="avatar" id="file-input" placeholder="New Profile" />
             <div id="preview"></div>
             <div id="error-div" style="text-align: center; padding: 5px; margin: auto"></div>
-            <input style="border: 1px solid rgba(247, 247, 247, 0.931)" type="text" name="name" placeholder="Type name" value="<%=locals.user.name%>" />
-            <input style="border: 1px solid rgba(247, 247, 247, 0.931)" type="text" name="bio" placeholder="Type Bio" value="<%=locals.user.bio%>" />
+            <input type="text" name="name" placeholder="Type name" value="<%=locals.user.name%>" />
+            <input type="text" name="bio" placeholder="Type Bio" value="<%=locals.user.bio%>" />
             <div>
                 <abbr title="put your Whatsapp no "><img
             src="/uploads/icons/38.whatsapp.png"
@@ -26,7 +26,7 @@
             width="20px"
             alt=""
         /></abbr>
-                <input style="border: 1px solid rgba(247, 247, 247, 0.931)" type="text" name="whatsapp" placeholder="Type Whatsapp No" value="<%=locals.user.whatsapp%>" />
+                <input type="text" name="whatsapp" placeholder="Type Whatsapp No" value="<%=locals.user.whatsapp%>" />
             </div>
             <div>
                 <abbr title="put your mobile no "><img
@@ -35,7 +35,7 @@
             width="20px"
             alt=""
         /></abbr>
-                <input style="border: 1px solid rgba(247, 247, 247, 0.931)" type="text" name="mobile" placeholder="Type Mobile No" value="<%=locals.user.mobile%>" />
+                <input type="text" name="mobile" placeholder="Type Mobile No" value="<%=locals.user.mobile%>" />
             </div>
             <div style="
           background-color: transparent;
